--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-nunito;
+  }
+  span {
+    @apply font-bold text-black dark:text-white;
+  }
+  p {
+    @apply text-slate-500 dark:text-slate-300;
+  }
+  input,
+  select {
+    @apply w-full m-4 p-2 lg:w-1/4 h-10 rounded-md shadow-md outline-0 bg-white dark:bg-darkModeElements dark:text-white;
+  }
+  button {
+    @apply w-auto p-2 m-2 rounded-lg bg-orangeElements text-white active:bg-orange-500;
+  }
+  header {
+    @apply w-full h-20 flex justify-between items-center shadow-md bg-white dark:bg-darkModeElements;
+  }
+  article {
+    @apply bg-white text-black dark:bg-darkModeElements dark:text-white;
+  }
+  ul {
+    @apply mb-4 w-auto flex flex-wrap justify-center rounded-xl bg-white dark:bg-darkModeElements;
+  }
+  li {
+    @apply w-10 h-10 text-center p-2 m-2 cursor-pointer rounded-lg bg-orangeElements text-white active:bg-orange-500;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #e9e9eb;
+  overflow-x: hidden;
+}
+
+.dark {
+  background-color: #0f0f0f;
 }
